Updating Claim Enrichment Response DTO